version/0.18/_sources/api/solver/_autosummary/settings/user_defined_function.rst.txt
:orphan:

.. _user_defined_function:

user_defined_function
=====================

.. autoclass:: ansys.fluent.core.solver.settings_232.user_defined_function.user_defined_function
    :show-inheritance:

.. rubric:: Included in:

================================================================   =============================================

Parent                                                                                                   Summary

================================================================   =============================================
:ref:`density <density>`                                                                        'density' child.

:ref:`viscosity <viscosity>`                                                                  'viscosity' child.

:ref:`specific_heat <specific_heat>`                                                      'specific_heat' child.

:ref:`thermal_conductivity <thermal_conductivity>`                                 'thermal_conductivity' child.

:ref:`premix_laminar_speed <premix_laminar_speed>`                                 'premix_laminar_speed' child.

:ref:`premix_critical_strain <premix_critical_strain>`                           'premix_critical_strain' child.

:ref:`premix_unburnt_fuel_mf <premix_unburnt_fuel_mf>`                           'premix_unburnt_fuel_mf' child.

:ref:`premix_adiabatic_temp <premix_adiabatic_temp>`                              'premix_adiabatic_temp' child.

:ref:`absorption_coefficient <absorption_coefficient>`                           'absorption_coefficient' child.

:ref:`partition_coeff <partition_coeff>`                                                'partition_coeff' child.

:ref:`scattering_coefficient <scattering_coefficient>`                           'scattering_coefficient' child.

:ref:`scattering_phase_function <scattering_phase_function>`                  'scattering_phase_function' child.

:ref:`uds_diffusivity <uds_diffusivity>`                                                'uds_diffusivity' child.

:ref:`uds_diffusivities_child <uds_diffusivities_child>`               'child_object_type' of uds_diffusivities.

:ref:`diffusivity <diffusivity>`                                                            'diffusivity' child.

:ref:`diffusivity_0 <diffusivity_0>`                                                      'diffusivity_0' child.

:ref:`diffusivity_1 <diffusivity_1>`                                                      'diffusivity_1' child.

:ref:`diffusivity_2 <diffusivity_2>`                                                      'diffusivity_2' child.

:ref:`radial_diffusivity <radial_diffusivity>`                                       'radial_diffusivity' child.

:ref:`tangential_diffusivity <tangential_diffusivity>`                           'tangential_diffusivity' child.

:ref:`axial_diffusivity <axial_diffusivity>`                                          'axial_diffusivity' child.

:ref:`electric_conductivity <electric_conductivity>`                              'electric_conductivity' child.

:ref:`dual_electric_conductivity <dual_electric_conductivity>`               'dual_electric_conductivity' child.

:ref:`lithium_diffusivity <lithium_diffusivity>`                                    'lithium_diffusivity' child.

:ref:`speed_of_sound <speed_of_sound>`                                                   'speed_of_sound' child.

:ref:`saturation_pressure <saturation_pressure>`                                    'saturation_pressure' child.

:ref:`vaporization_temperature <vaporization_temperature>`                     'vaporization_temperature' child.

:ref:`density <density_1>`                                                                      'density' child.

:ref:`specific_heat <specific_heat_1>`                                                    'specific_heat' child.

:ref:`thermal_conductivity <thermal_conductivity_1>`                               'thermal_conductivity' child.

:ref:`planar_conductivity <planar_conductivity>`                                    'planar_conductivity' child.

:ref:`transverse_conductivity <transverse_conductivity>`                        'transverse_conductivity' child.

:ref:`radial_conductivity <radial_conductivity>`                                    'radial_conductivity' child.

:ref:`tangential_conductivity <tangential_conductivity>`                        'tangential_conductivity' child.

:ref:`axial_conductivity <axial_conductivity>`                                       'axial_conductivity' child.

:ref:`conductivity_0 <conductivity_0>`                                                   'conductivity_0' child.

:ref:`conductivity_1 <conductivity_1>`                                                   'conductivity_1' child.

:ref:`conductivity_2 <conductivity_2>`                                                   'conductivity_2' child.

:ref:`conductivity <conductivity>`                                                         'conductivity' child.

:ref:`scattering_coefficient <scattering_coefficient_1>`                         'scattering_coefficient' child.

:ref:`uds_diffusivity <uds_diffusivity_1>`                                              'uds_diffusivity' child.

:ref:`struct_youngs_modulus <struct_youngs_modulus>`                              'struct_youngs_modulus' child.

:ref:`struct_poisson_ratio <struct_poisson_ratio>`                                 'struct_poisson_ratio' child.

:ref:`struct_thermal_expansion <struct_thermal_expansion>`                     'struct_thermal_expansion' child.

:ref:`density <density_2>`                                                                      'density' child.

:ref:`viscosity <viscosity_1>`                                                                'viscosity' child.

:ref:`specific_heat <specific_heat_2>`                                                    'specific_heat' child.

:ref:`thermal_conductivity <thermal_conductivity_2>`                               'thermal_conductivity' child.

:ref:`premix_laminar_thickness <premix_laminar_thickness>`                     'premix_laminar_thickness' child.

:ref:`premix_unburnt_temp <premix_unburnt_temp_1>`                                  'premix_unburnt_temp' child.

:ref:`premix_unburnt_cp <premix_unburnt_cp>`                                          'premix_unburnt_cp' child.

:ref:`premix_unburnt_density <premix_unburnt_density_1>`                         'premix_unburnt_density' child.

:ref:`premix_heat_trans_coeff <premix_heat_trans_coeff_1>`                      'premix_heat_trans_coeff' child.

:ref:`absorption_coefficient <absorption_coefficient_1>`                         'absorption_coefficient' child.

:ref:`mass_diffusivity <mass_diffusivity>`                                             'mass_diffusivity' child.

:ref:`thermal_diffusivity <thermal_diffusivity>`                                    'thermal_diffusivity' child.

:ref:`tmelt <tmelt>`                                                                              'tmelt' child.

:ref:`density <density_3>`                                                                      'density' child.

:ref:`specific_heat <specific_heat_3>`                                                    'specific_heat' child.

:ref:`thermophoretic_co <thermophoretic_co>`                                          'thermophoretic_co' child.

:ref:`scattering_factor <scattering_factor>`                                          'scattering_factor' child.

:ref:`emissivity <emissivity>`                                                               'emissivity' child.

:ref:`viscosity <viscosity_2>`                                                                'viscosity' child.

:ref:`dpm_surften <dpm_surften>`                                                            'dpm_surften' child.

:ref:`electric_conductivity <electric_conductivity_1>`                            'electric_conductivity' child.

:ref:`dual_electric_conductivity <dual_electric_conductivity_1>`             'dual_electric_conductivity' child.

:ref:`charge_density <charge_density>`                                                   'charge_density' child.

:ref:`latent_heat <latent_heat_1>`                                                          'latent_heat' child.

:ref:`binary_diffusivity <binary_diffusivity_1>`                                     'binary_diffusivity' child.

:ref:`binary_diffusivity <binary_diffusivity>`                                       'binary_diffusivity' child.

:ref:`vapor_pressure <vapor_pressure>`                                                   'vapor_pressure' child.

:ref:`boiling_point <boiling_point>`                                                      'boiling_point' child.

:ref:`scattering_factor <scattering_factor_1>`                                        'scattering_factor' child.

:ref:`emissivity <emissivity_1>`                                                             'emissivity' child.

:ref:`dpm_surften <dpm_surften_1>`                                                          'dpm_surften' child.

:ref:`density <density_4>`                                                                      'density' child.

:ref:`swelling_coefficient <swelling_coefficient>`                                 'swelling_coefficient' child.

:ref:`density <density_5>`                                                                      'density' child.

:ref:`specific_heat <specific_heat_4>`                                                    'specific_heat' child.

:ref:`vp_equilib <vp_equilib>`                                                               'vp_equilib' child.

================================================================   =============================================

